# cproject

./: README.md
Cgaoji/: CMakeLists.txt
Cgaoji/include/: Menu.h  math.h
Cgaoji/src/: Menu.c  main.c
Math/: CMakeLists.txt  math.c
